# Pathtracing

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bunny.txt  cmake_install.cmake  colswitch.py  cube.txt  data.txt  data2.txt  demo.py  denoise.py  gen.py  interactive.cpp  interface  interface.cpp  kdtree.cpp  lighting.cpp  lights.cpp  main  main.cpp  mainOMP  mainOMP.cpp  master.txt  math.cpp  normal.py  obj_lib.cpp  objects.cpp  path.txt  polygonMesh.cpp  scene.txt  temp.py  util_lib.cpp  utilities.cpp
Fruit/: apple.txt  banana2.txt  loosegrapes.txt  miscfruit.txt  pear.txt  plate.txt
Images/Scenes/: fruit.txt
ML/: eval.py  extract.py  mv.py  optixai.py  plot.py
ML/models/: car_final.h5  cbox_final.h5  mixed_final.h5  room_final.h5
OBJ2/: pear.txt
OLD/Scenes/: car.txt  fruit.txt  room.txt
Preprocess/: colswitch.py  normal.py  remove.py  tplot.py
Scenes/: bunny.txt  cube.txt  fruit.txt
car/: box.txt  car.txt  master.txt
cpp_util/: kdtree.cpp  lighting.cpp  polygonMesh.cpp  reader.cpp  utilities.cpp
fireplace/: process.py
fruit/: loosegrapes.txt  pear.txt  plate.txt
ml/: optixai.py  srcnn.py
ml/models/: sponza_final.h5
mls/models/: sr_final.h5
models/car/: car.txt  master.txt
models/cbox/: box.py  rand.py
models/pine/: box.txt  master.txt  pine2.txt
models/sponza/: master.txt
paths/: carpath.txt  cboxpath.txt
room/: bedroom.txt  master.txt
scenes/car/: master.txt
scenes/cbox/: cbox.txt  cbox2.txt  master.txt
sponza/: master.txt
util/: kdtree.cpp  lighting.cpp  polygonMesh.cpp  reader.cpp  utilities.cpp
(+13 files in other folders)
