set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
cmake_minimum_required(VERSION 2.8)
project( mainOMP )
find_package( OpenCV REQUIRED )
find_package(MPI REQUIRED)
find_package(PythonLibs REQUIRED)
include_directories( ${MPI_INCLUDE_PATH} )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${PYTHON_INCLUDE_DIRS} )
include_directories(/usr/local/include)
add_executable( mainOMP mainOMP.cpp )
target_link_libraries( mainOMP ${OpenCV_LIBS} )
target_link_libraries( mainOMP ${MPI_LIBRARIES} )
target_link_libraries( mainOMP ${PYTHON_LIBRARIES} )
if(MPI_COMPILE_FLAGS)
  set_target_properties( mainOMP PROPERTIES
    COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
endif()
if(MPI_LINK_FLAGS)
  set_target_properties( mainOMP PROPERTIES
    LINK_FLAGS "${MPI_LINK_FLAGS}")
endif()
